--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -5,11 +5,11 @@
       <div class="col-md-6">
         <div class="copyright">
           &copy; {{today | date: 'yyyy'}}
-          <p>Coding Roadmap</p>
+          <p>It Might Be Interesting</p>
         </div>
       </div>
       <div class="col-md-6 sponsor">
-        <p>Content Managed With <a href="https://buttercms.com/" target="_blank"><img src="https://s3-us-west-2.amazonaws.com/bad-movie-night/codingroadmap/butter-b.png" alt="ButterCMS" /></a></p>
+        <p>Content Managed With <a href="https://buttercms.com/" target="_blank"><img src="https://s3-us-west-2.amazonaws.com/bad-movie-night/itmightbeinteresting/butter-b.png" alt="ButterCMS" /></a></p>
         <!-- <ul class="nav nav-footer justify-content-end">
           <li class="nav-item">
             <a href="https://www.creative-tim.com?ref=adsa-footer" class="nav-link" target="_blank">Creative Tim</a>
