--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom headroom--top headroom--pinned">
   <div class="container">
     <a class="navbar-brand mr-lg-5" [routerLink]="['/']">
-      <img src="./assets/img/brand/Coding-Roadmap-Logo.png">
+      <img src="/src/assets/img/It_Might_Be_Interesting_Black.jpg">
     </a>
     <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed"
           [attr.aria-expanded]="!isCollapsed" aria-controls="navbar_global">
@@ -12,7 +12,7 @@
         <div class="row">
           <div class="col-6 collapse-brand">
             <a [routerLink]="['/']">
-              <img src="./assets/img/brand/Coding-Roadmap-Logo.png">
+              <img src="/src/assets/img/It_Might_Be_Interesting_Black.jpg">
             </a>
           </div>
           <div class="col-6 collapse-close">
@@ -37,27 +37,21 @@
       </ul>
       <ul class="navbar-nav align-items-lg-center ml-lg-auto">
         <li class="nav-item">
+          <a class="nav-link nav-link-icon" href="https://twitter.com/itmightbeinteresting" target="_blank" data-toggle="tooltip" title="Follow us on Twitter">
+            <i class="fa fa-twitter-square"></i>
+            <span class="nav-link-inner--text d-lg-none">Twitter</span>
+          </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link nav-link-icon" href="https://www.youtube.com/channel/UCHs36y-lcixFbdek5BlrA5g" target="_blank" data-toggle="tooltip" title="Watch us on YouTube">
             <i class="fa fa-youtube"></i>
             <span class="nav-link-inner--text d-lg-none">YouTube</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://twitter.com/CodingRoadmap" target="_blank" data-toggle="tooltip" title="Follow us on Twitter">
-            <i class="fa fa-twitter-square"></i>
-            <span class="nav-link-inner--text d-lg-none">Twitter</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://www.facebook.com/codingroadmap" target="_blank" data-toggle="tooltip" title="Like us on Facebook">
+          <a class="nav-link nav-link-icon" href="https://www.facebook.com/itmightbeinteresting" target="_blank" data-toggle="tooltip" title="Like us on Facebook">
             <i class="fa fa-facebook-square"></i>
             <span class="nav-link-inner--text d-lg-none">Facebook</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://github.com/codingroadmap" target="_blank" data-toggle="tooltip" title="Star us on Github">
-            <i class="fa fa-github"></i>
-            <span class="nav-link-inner--text d-lg-none">Github</span>
           </a>
         </li>
       </ul>
