--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -9,7 +9,7 @@
         </div>
       </div>
       <div class="col-md-6 sponsor">
-        <p>Content Managed With <a href="https://buttercms.com/" target="_blank"><img src="https://s3-us-west-2.amazonaws.com/bad-movie-night/itmightbeinteresting/butter-b.png" alt="ButterCMS" /></a></p>
+        <p>Content Managed With <a href="https://buttercms.com/" target="_blank"><img src="https://bad-movie-night.s3-us-west-2.amazonaws.com/codingroadmap/butter-b.png" alt="ButterCMS" /></a></p>
         <!-- <ul class="nav nav-footer justify-content-end">
           <li class="nav-item">
             <a href="https://www.creative-tim.com?ref=adsa-footer" class="nav-link" target="_blank">Creative Tim</a>
