--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -17,7 +17,7 @@
           <div class="row text-center justify-content-center">
             <div class="col-lg-12">
               <h1 class="display-3 text-white">It Might Be Interesting
-                <span>Articles</span>
+                <span>Episodes</span>
               </h1>
             </div>
           </div>
