--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -26,7 +26,7 @@
       </div>
       <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
         <li class="nav-item">
-          <a [routerLink]="['/']" class="dropdown-item">Articles</a>
+          <a [routerLink]="['/']" class="dropdown-item">Episodes</a>
         </li>
         <li class="nav-item">
           <a [routerLink]="['/categories']" class="dropdown-item">Categories</a>
