--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -43,7 +43,6 @@
           </div>
         </div>
         <div *ngIf="!loading" class="col-lg-12 text-center">
-          <h4>By {{ post.data?.author.first_name }} {{ post.data?.author.last_name }}</h4>
           <h5>{{ post.data?.published | date }}</h5>
         </div>
         <div *ngIf="!loading" class="col-lg-12 text-center tag-section post-tag-section">
@@ -55,6 +54,7 @@
         </div>
       </div>
       <div class="row justify-content-center post-content">
+        <iframe *ngIf="!loading" width="100%" height="400" style="border: none;" title="Ep.01: The State of Religion in America" src="https://www.podbean.com/media/player/ukdar-b626e9&amp;?from=usersite&amp;vjs=1&amp;skin=2&amp;fonts=Helvetica&amp;auto=0&amp;download=1" scrolling="no" data-name="pb-iframe-player"></iframe>
         <div *ngIf="!loading" class="col-lg-12" [innerHTML]="post.data?.body"></div>
       </div>
     </div>
