Updated post info

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div *ngIf="!loading" class="col-lg-12 text-center">
-          <h5>{{ post.data?.published | date }}</h5>
+          <h5>Released: {{ post.data?.published | date }}</h5>
         </div>
         <div *ngIf="!loading" class="col-lg-12 text-center tag-section post-tag-section">
           <ul class="tag-list post-tag-list">
