--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -37,12 +37,12 @@
       </ul>
       <ul class="navbar-nav align-items-lg-center ml-lg-auto">
         <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://twitter.com/itmightbeinteresting" target="_blank" data-toggle="tooltip" title="Follow us on Twitter">
+          <a class="nav-link nav-link-icon" href="https://twitter.com/imbinteresting" target="_blank" data-toggle="tooltip" title="Follow us on Twitter">
             <i class="fa fa-twitter-square"></i>
             <span class="nav-link-inner--text d-lg-none">Twitter</span>
           </a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link nav-link-icon" href="https://www.youtube.com/channel/UCHs36y-lcixFbdek5BlrA5g" target="_blank" data-toggle="tooltip" title="Watch us on YouTube">
             <i class="fa fa-youtube"></i>
             <span class="nav-link-inner--text d-lg-none">YouTube</span>
@@ -53,7 +53,7 @@
             <i class="fa fa-facebook-square"></i>
             <span class="nav-link-inner--text d-lg-none">Facebook</span>
           </a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
