Added About Us page. Ready to deploy

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -34,6 +34,9 @@
         <li class="nav-item">
           <a [routerLink]="['/tags']" class="dropdown-item">Tags</a>
         </li>
+        <li class="nav-item">
+          <a [routerLink]="['/about']" class="dropdown-item">About</a>
+        </li>
       </ul>
       <ul class="navbar-nav align-items-lg-center ml-lg-auto">
         <li class="nav-item">
