--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,3 +15,28 @@
   font-size: 18px;
   font-weight: 500;
 }
+
+.post-inner {
+  margin-top: 75px;
+}
+
+.post-date {
+  color: #ffffff;
+}
+
+.py-lg-md {
+  padding-bottom: 2rem !important;
+}
+
+.badge-pill {
+  margin-right: 0px !important;
+}
+
+.post-content {
+  margin-top: 40px !important;
+}
+
+.tags-title {
+  font-weight: 700;
+  margin-bottom: 0px;
+}
