--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -15,8 +15,11 @@
       <div class="container py-lg-md d-flex">
         <div class="col px-0">
           <div class="row text-center justify-content-center">
-            <div class="col-lg-12">
-              <h1 *ngIf="!loading" class="display-3 text-white">{{ post.data?.title }}</h1>
+            <div *ngIf="!loading" class="col-lg-12">
+              <h1 class="display-3 text-white">{{ post.data?.title }}</h1>
+            </div>
+            <div *ngIf="!loading" class="col-lg-12 text-center">
+              <h4 class="post-date">{{ post.data?.published | date }}</h4>
             </div>
           </div>
         </div>
@@ -42,9 +45,7 @@
             <p *ngIf="step4"><ngb-progressbar type="success" [value]="100" [striped]="true" [animated]="true" height="35px"><i class="bootstrap-bar"><p>Success!</p></i></ngb-progressbar></p>
           </div>
         </div>
-        <div *ngIf="!loading" class="col-lg-12 text-center">
-          <h5>Released: {{ post.data?.published | date }}</h5>
-        </div>
+        <h5 *ngIf="!loading" class="text-center tags-title">Tags:</h5>
         <div *ngIf="!loading" class="col-lg-12 text-center tag-section post-tag-section">
           <ul class="tag-list post-tag-list">
             <li *ngFor="let tag of post.data?.tags">
@@ -54,8 +55,8 @@
         </div>
       </div>
       <div class="row justify-content-center post-content">
-        <iframe *ngIf="!loading" width="100%" height="400" style="border: none;" title="Ep.01: The State of Religion in America" src="https://www.podbean.com/media/player/ukdar-b626e9&amp;?from=usersite&amp;vjs=1&amp;skin=2&amp;fonts=Helvetica&amp;auto=0&amp;download=1" scrolling="no" data-name="pb-iframe-player"></iframe>
-        <div *ngIf="!loading" class="col-lg-12" [innerHTML]="post.data?.body"></div>
+        <iframe *ngIf="!loading" width="100%" height="500" style="border: none;" title="Ep.01: The State of Religion in America" src="https://www.podbean.com/media/player/ukdar-b626e9&amp;?from=usersite&amp;vjs=1&amp;skin=2&amp;fonts=Helvetica&amp;auto=0&amp;download=1" scrolling="no" data-name="pb-iframe-player"></iframe>
+        <div *ngIf="!loading" class="col-lg-12 post-inner" [innerHTML]="post.data?.body"></div>
       </div>
     </div>
   </section>
