Fixed some grammatical errors in About Us and added Google Analytics tracker in index header

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -37,7 +37,7 @@
       </div>
       <div class="row justify-content-center post-content">
         <div class="col-lg-12">
-          <p>"It Might Be Interesting" is the brain-child of host Jon Walsh. Jon and co-host Josh Levy have always had a passion for their frequent political and cultural discussions since 2008. They both share a lack of patience for any political or cultural arguments or claims that were baseless in fact, or just lazy, low-hanging fruit arguments.</p>
+          <p>"It Might Be Interesting" is the brain-child of hosts Jon Walsh and Josh Levy. They've always had a passion for their frequent political and cultural discussions since 2008. And they also share a lack of patience for any political or cultural arguments or claims that are either baseless in fact, or simply lazy, low-hanging fruit arguments.</p>
           <p>Jon and Josh felt like the current landscape with media - especially Social Media - has only contributed to the regression of discourse we see today. Current discourse has strayed far from deep discussions and thoughtful debate we once had. Now, people make an effort more based on landing the biggest talking-point punch, rather than making a genuine effort to understand issues on a deeper level, independently dive even deeper into research, and more importantly, not being afraid to be wrong about something.</p>
           <p>After seeing the deterioration of discourse for too long, they said, "Enough is enough." And "It Might Be Interesting" was born.</p>
           <hr>
