--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <img src="./assets/img/It_Might_Be_Interesting_Black.jpg">
     </a>
     <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed"
-          [attr.aria-expanded]="!isCollapsed" aria-controls="navbar_global">
+        [attr.aria-expanded]="!isCollapsed" aria-controls="navbar_global">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="navbar-collapse collapse" id="navbar_global" [ngbCollapse]="isCollapsed">
@@ -17,7 +17,7 @@
           </div>
           <div class="col-6 collapse-close">
             <button type="button" class="navbar-toggler" (click)="isCollapsed = !isCollapsed"
-                  [attr.aria-expanded]="!isCollapsed" aria-controls="navbar_global">
+                [attr.aria-expanded]="!isCollapsed" aria-controls="navbar_global">
               <span></span>
               <span></span>
             </button>
@@ -40,23 +40,23 @@
       </ul>
       <ul class="navbar-nav align-items-lg-center ml-lg-auto">
         <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://twitter.com/imbinteresting" target="_blank" data-toggle="tooltip" title="Follow us on Twitter">
-            <i class="fa fa-twitter-square"></i>
-            <span class="nav-link-inner--text d-lg-none">Twitter</span>
-          </a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://www.youtube.com/channel/UCHs36y-lcixFbdek5BlrA5g" target="_blank" data-toggle="tooltip" title="Watch us on YouTube">
-            <i class="fa fa-youtube"></i>
+          <a class="nav-link nav-link-icon" href="https://www.youtube.com/channel/UCx1GPB_LbHVcCQmNSObLcgw" target="_blank" data-toggle="tooltip" title="Listen on YouTube">
+            <i class="fab fa-youtube-square"></i>
             <span class="nav-link-inner--text d-lg-none">YouTube</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://www.facebook.com/itmightbeinteresting" target="_blank" data-toggle="tooltip" title="Like us on Facebook">
-            <i class="fa fa-facebook-square"></i>
-            <span class="nav-link-inner--text d-lg-none">Facebook</span>
+          <a class="nav-link nav-link-icon" href="https://www.facebook.com/itmightbeinteresting" target="_blank" data-toggle="tooltip" title="Subscribe on iTunes">
+            <i class="fab fa-itunes"></i>
+            <span class="nav-link-inner--text d-lg-none">iTunes</span>
           </a>
-        </li> -->
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-link-icon" href="https://twitter.com/imbinteresting" target="_blank" data-toggle="tooltip" title="Follow us on Twitter">
+            <i class="fab fa-twitter-square"></i>
+            <span class="nav-link-inner--text d-lg-none">Twitter</span>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
