Updated header and adding episode links to individual posts

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -52,6 +52,12 @@
           </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link nav-link-icon" href="https://open.spotify.com/show/61ynpDeGuMAs0WK8u3msjy" target="_blank" data-toggle="tooltip" title="Subscribe on Spotify">
+            <i class="fab fa-spotify"></i>
+            <span class="nav-link-inner--text d-lg-none">Spotify</span>
+          </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link nav-link-icon" href="https://twitter.com/imbinteresting" target="_blank" data-toggle="tooltip" title="Follow us on Twitter">
             <i class="fab fa-twitter-square"></i>
             <span class="nav-link-inner--text d-lg-none">Twitter</span>
