--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -56,6 +56,29 @@
       </div>
       <div class="row justify-content-center post-content">
         <iframe *ngIf="!loading" width="100%" height="500" style="border: none;" title="Ep.01: The State of Religion in America" src="https://www.podbean.com/media/player/ukdar-b626e9&amp;?from=usersite&amp;vjs=1&amp;skin=2&amp;fonts=Helvetica&amp;auto=0&amp;download=1" scrolling="no" data-name="pb-iframe-player"></iframe>
+        <div class="social-post-links">
+          <h5>Listen to this episode on:</h5>
+          <ul>
+            <li class="nav-item">
+              <a class="nav-link nav-link-icon" href="https://www.facebook.com/itmightbeinteresting" target="_blank" data-toggle="tooltip" title="Subscribe on iTunes">
+                <i class="fab fa-itunes"></i>
+                <span class="nav-link-inner--text d-lg-none">iTunes</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link nav-link-icon" href="https://www.youtube.com/channel/UCx1GPB_LbHVcCQmNSObLcgw" target="_blank" data-toggle="tooltip" title="Listen on YouTube">
+                <i class="fab fa-youtube-square"></i>
+                <span class="nav-link-inner--text d-lg-none">YouTube</span>
+              </a>
+            </li>
+            <li>
+              <a class="nav-link nav-link-icon" href="https://open.spotify.com/show/61ynpDeGuMAs0WK8u3msjy" target="_blank" data-toggle="tooltip" title="Subscribe on Spotify">
+                <i class="fab fa-spotify"></i>
+                <span class="nav-link-inner--text d-lg-none">Spotify</span>
+              </a>
+            </li>
+          </ul>
+        </div>
         <div *ngIf="!loading" class="col-lg-12 post-inner" [innerHTML]="post.data?.body"></div>
       </div>
     </div>
