--- a/src/app/forms/post-info.component.html
+++ b/src/app/forms/post-info.component.html
@@ -16,7 +16,7 @@
           <div class="card bg-secondary shadow border-0">
             <div class="card-header bg-white pb-5">
               <div class="text-muted text-center mb-1">
-                <h2>Login</h2>
+                <h3>Add Post Info</h3>
               </div>
             </div>
             <div class="card-body px-lg-5 py-lg-5">
