Added Login and AddPost pages and routes and cleaned up post code

--- a/src/app/forms/post-info.component.html
+++ b/src/app/forms/post-info.component.html
@@ -12,39 +12,57 @@
     </div>
     <div class="container pt-lg-md">
       <div class="row justify-content-center">
-        <div class="col-lg-5">
+        <div class="col-lg-8">
           <div class="card bg-secondary shadow border-0">
-            <div class="card-header bg-white pb-5">
+            <div class="card-header bg-white pb-2">
               <div class="text-muted text-center mb-1">
                 <h3>Add Post Info</h3>
               </div>
             </div>
             <div class="card-body px-lg-5 py-lg-5">
               <form role="form">
-                <div class="form-group mb-3" [ngClass]="{'focused':focus===true}">
+                <div class="form-group mb-3" [ngClass]="{'focused':focus1===true}">
                   <div class="input-group input-group-alternative">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="ni ni-email-83"></i></span>
-                    </div>
-                    <input class="form-control" placeholder="Email" type="email" (focus)="focus=true" (blur)="focus=false">
+                    <input class="form-control" placeholder="Title" type="text" (focus)="focus1=true" (blur)="focus1=false">
                   </div>
                 </div>
-                <div class="form-group" [ngClass]="{'focused':focus1===true}">
+                <div class="form-group mb-3" [ngClass]="{'focused':focus2===true}">
                   <div class="input-group input-group-alternative">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
-                    </div>
-                    <input class="form-control" placeholder="Password" type="password" (focus)="focus1=true" (blur)="focus1=false">
+                    <input class="form-control" placeholder="Slug" type="text" (focus)="focus2=true" (blur)="focus2=false">
                   </div>
                 </div>
-                <div class="custom-control custom-control-alternative custom-checkbox">
-                  <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
-                  <label class="custom-control-label" for=" customCheckLogin">
-                    <span>Remember me</span>
-                  </label>
+                <div class="form-group mb-3" [ngClass]="{'focused':focus3===true}">
+                  <div class="input-group input-group-alternative">
+                    <input class="form-control" placeholder="Website URL" type="url" (focus)="focus3=true" (blur)="focus3=false">
+                  </div>
+                </div>
+                <div class="form-group mb-3" [ngClass]="{'focused':focus4===true}">
+                  <div class="input-group input-group-alternative">
+                    <input class="form-control" placeholder="Download URL" type="url" (focus)="focus4=true" (blur)="focus4=false">
+                  </div>
+                </div>
+                <div class="form-group mb-3" [ngClass]="{'focused':focus5===true}">
+                  <div class="input-group input-group-alternative">
+                    <input class="form-control" placeholder="Embed URL" type="url" (focus)="focus5=true" (blur)="focus5=false">
+                  </div>
+                </div>
+                <div class="form-group mb-3" [ngClass]="{'focused':focus6===true}">
+                  <div class="input-group input-group-alternative">
+                    <input class="form-control" placeholder="iTunes URL" type="url" (focus)="focus6=true" (blur)="focus6=false">
+                  </div>
+                </div>
+                <div class="form-group mb-3" [ngClass]="{'focused':focus7===true}">
+                  <div class="input-group input-group-alternative">
+                    <input class="form-control" placeholder="YouTube URL" type="url" (focus)="focus7=true" (blur)="focus7=false">
+                  </div>
+                </div>
+                <div class="form-group mb-3" [ngClass]="{'focused':focus8===true}">
+                  <div class="input-group input-group-alternative">
+                    <input class="form-control" placeholder="Spotify URL" type="url" (focus)="focus8=true" (blur)="focus8=false">
+                  </div>
                 </div>
                 <div class="text-center">
-                  <button type="button" class="btn btn-primary my-4">Login</button>
+                  <button type="button" class="btn btn-primary my-4">Submit</button>
                 </div>
               </form>
             </div>
