--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,7 @@
 <main>
   <div class="position-relative">
     <section class="section section-lg section-shaped pb-200 bg-gradient-default">
-      <div class="shape shape-style-1 shape-default">
-        <span></span>
+      <div class="shape shape-style-1 bg-gradient-default">
         <span></span>
         <span></span>
         <span></span>
