--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="row justify-content-center post-content">
-        <iframe *ngIf="!loading" width="100%" height="135" style="border: none;" title="Ep.01: The State of Religion in America" [src]="iframeUrl" scrolling="no" data-name="pb-iframe-player"></iframe>
+        <iframe *ngIf="!loading && episode.embed_url" width="100%" height="135" style="border: none;" title="Ep.01: The State of Religion in America" [src]="iframeUrl" scrolling="no" data-name="pb-iframe-player"></iframe>
         <div *ngIf="!loading" class="social-post-links">
           <h5>Listen to this episode on:</h5>
           <ul class="post-social-links">
