Working on login form

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -30,8 +30,8 @@
       </div>
     </section>
   </div>
-  <section class="section section-lg-0 pt-lg-0 mt--200">
-    <div class="post-img">
+  <section class="section section-lg-0 pt-lg-0 mt--200 col-xs-12">
+    <div class="post-img col-xs-12">
       <img *ngIf="!loading" src="{{ post.data?.featured_image }}" />
     </div>
     <div class="container">
