--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,13 +20,13 @@
               </div>
             </div>
             <div class="card-body px-lg-5 py-lg-5">
-              <form role="form">
+              <form [formGroup]="loginForm" (ngSubmit)="login()" novalidate>
                 <div class="form-group mb-3" [ngClass]="{'focused':focus===true}">
                   <div class="input-group input-group-alternative">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Email" type="email" (focus)="focus=true" (blur)="focus=false">
+                    <input id="email" name="email" [(ngModel)]="email" value="email" formControlName="email" class="form-control" placeholder="Email" type="email" (focus)="focus=true" (blur)="focus=false" required>
                   </div>
                 </div>
                 <div class="form-group" [ngClass]="{'focused':focus1===true}">
@@ -34,17 +34,11 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Password" type="password" (focus)="focus1=true" (blur)="focus1=false">
+                    <input id="password" name="password" [(ngModel)]="password" value="password" formControlName="password" class="form-control" placeholder="Password" type="password" (focus)="focus1=true" (blur)="focus1=false" required>
                   </div>
                 </div>
-                <div class="custom-control custom-control-alternative custom-checkbox">
-                  <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
-                  <label class="custom-control-label" for=" customCheckLogin">
-                    <span>Remember me</span>
-                  </label>
-                </div>
                 <div class="text-center">
-                  <button type="button" class="btn btn-primary my-4">Login</button>
+                  <button type="submit" class="btn btn-primary my-4">Login</button>
                 </div>
               </form>
             </div>
