Added login and addpost forms. Need to get addpost to post to database

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -52,3 +52,11 @@ ul.post-social-links {
 ul.post-social-links li a i {
   font-size: 42px;
 }
+
+.mat-form-field {
+  width: 100%;
+}
+
+.mat-input-element {
+  color: #000000;
+}
