--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -37,6 +37,11 @@
                     <input id="password" name="password" [(ngModel)]="password" value="password" formControlName="password" class="form-control" placeholder="Password" type="password" (focus)="focus1=true" (blur)="focus1=false" required>
                   </div>
                 </div>
+                <p *ngIf="loginError">
+                  <ngb-alert type="danger" [dismissible]="false" class="text-center">
+                    <strong>Invalid login. Please try again.</strong>
+                  </ngb-alert>
+                </p>
                 <div class="text-center">
                   <button type="submit" class="btn btn-primary my-4">Login</button>
                 </div>
