--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -60,3 +60,8 @@ ul.post-social-links li a i {
 .mat-input-element {
   color: #000000;
 }
+
+.tag-section ul li {
+  margin-left: 4px;
+  margin-right: 4px;
+}
