--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="container py-lg-md d-flex">
         <div class="col px-0">
-          <div class="row text-center justify-content-center">
+          <div class="row text-center justify-content-center post-title">
             <div *ngIf="!loading" class="col-lg-12">
               <h1 class="display-3 text-white">{{ post.data?.title }}</h1>
             </div>
