Added spinner, alert, and asynch functions for home page for improved UX and reliability

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -24,7 +24,7 @@
           </div>
         </div>
       </div>
-      <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
+      <ul class="navbar-nav align-items-lg-center">
         <li class="nav-item">
           <a [routerLink]="['/']" class="dropdown-item">Episodes</a>
         </li>
