--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,15 +32,15 @@
   <section class="section section-lg-0 pt-lg-0 mt--200">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-12 blog-loader">
-          <div>
-            <p *ngIf="step1"><ngb-progressbar type="danger" [value]="25" [striped]="true" [animated]="true" height="35px"><i class="bootstrap-bar"><p>Initializing...</p></i></ngb-progressbar></p>
-            <p *ngIf="step2"><ngb-progressbar type="warning" [value]="50" [striped]="true" [animated]="true" height="35px"><i class="bootstrap-bar"><p>Gathering Data...</p></i></ngb-progressbar></p>
-            <p *ngIf="step3"><ngb-progressbar type="info" [value]="75" [striped]="true" [animated]="true" height="35px"><i class="bootstrap-bar"><p>Rendering...</p></i></ngb-progressbar></p>
-            <p *ngIf="step4"><ngb-progressbar type="success" [value]="100" [striped]="true" [animated]="true" height="35px"><i class="bootstrap-bar"><p>Success!</p></i></ngb-progressbar></p>
-          </div>
+        <div *ngIf="loading" class="spinner-container">
+          <p-progressSpinner [style]="{width: '150px', height: '150px'}" strokeWidth="4"></p-progressSpinner>
         </div>
         <div class="col-lg-12 blog-list">
+          <p *ngIf="alert">
+            <ngb-alert [dismissible]="false" type="danger">
+              <strong>Unable to load content. Please refresh the page to try again.</strong>
+            </ngb-alert>
+          </p>
           <ul [hidden]="!showData">
             <li *ngFor="let post of posts">
               <div class="row row-grid">
