--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -15,3 +15,34 @@
   font-size: 18px;
   font-weight: 500;
 }
+
+.alert-danger {
+  background-color: darkred;
+  font-size: 1.15rem;
+  text-align: center;
+  padding: 25px !important;
+}
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+@keyframes ui-progress-spinner-color {
+  100%,
+  0% {
+    stroke: #ffffff;
+  }
+  40% {
+    stroke: #ffffff;
+  }
+  66% {
+    stroke: #ffffff;
+  }
+  80%,
+  90% {
+    stroke: #ffffff;
+  }
+}
