--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,3 +1,8 @@
 .nav-link-icon i {
   font-size: 30px;
 }
+
+.navbar-nav li:hover {
+  background-color: #191E4E !important;
+  color: #ffffff !important;
+}
