--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -17,7 +17,7 @@
             <div class="col-lg-12">
               <h1 class="display-3 text-white">{{ post.data?.title }}</h1>
             </div>
-            <div class="col-lg-12 text-center">
+            <div *ngIf="options" class="col-lg-12 text-center">
               <h4 class="post-date">{{ post.data?.published | date }}</h4>
             </div>
           </div>
@@ -54,8 +54,8 @@
         </div>
       </div>
       <div class="row justify-content-center post-content">
-        <iframe *ngIf="!loading && episode" width="100%" height="135" style="border: none;" title="Ep.01: The State of Religion in America" [src]="iframeUrl" scrolling="no" data-name="pb-iframe-player"></iframe>
-        <div *ngIf="!loading && episode" class="social-post-links">
+        <iframe *ngIf="!loading && options" width="100%" height="135" style="border: none;" title="Ep.01: The State of Religion in America" [src]="iframeUrl" scrolling="no" data-name="pb-iframe-player"></iframe>
+        <div *ngIf="!loading && options" class="social-post-links">
           <h5>Listen to this episode on:</h5>
           <ul class="post-social-links">
             <li class="nav-item">
