Updated responsive design

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -107,6 +107,14 @@ ul.post-social-links li a i {
     margin-bottom: -30px;
   }
 
+  .blog-title {
+    text-align: center !important;
+  }
+
+  .blog-date {
+    text-align: center !important;
+  }
+
   .post-img img {
     width: 100vw !important;
   }
