--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -61,6 +61,11 @@
   font-weight: 500;
 }
 
+.post-title {
+  display: flex !important;
+  flex-direction: column !important;
+}
+
 .post-inner {
   margin-top: 25px;
 }
@@ -177,6 +182,8 @@ h3.upcoming {
   }
 
   .post-title {
+    display: flex !important;
+    flex-direction: column !important;
     margin-top: 70px;
     margin-bottom: -30px;
   }
